# wordle-leaderboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
helpers/: authorizer.py  config.py
