[tool.poetry]
name = "wordle-leaderboard"
version = "0.1.0"
description = ""
authors = ["KELLEN ANKER <kellenanker7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.25.1"
twilio = "^7.16.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
