[tool.poetry]
name = "wordle-leaderboard"
version = "0.1.0"
description = ""
authors = ["KELLEN ANKER <kellenanker7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.0.0"
twilio = "^8.0.0"
bs4 = "^0.0.1"
urllib3 = "<2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
